--- a/mdk/MDK-ARM/USBDevice.uvprojx
+++ b/mdk/MDK-ARM/USBDevice.uvprojx
@@ -10,13 +10,13 @@
       <TargetName>USBDevice Standalone</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>5060750::V5.06 update 6 (build 750)::.\ARMCC</pCCUsed>
+      <pCCUsed>5060960::V5.06 update 7 (build 960)::.\ARMCC</pCCUsed>
       <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>STM32F405RGTx</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F4xx_DFP.2.14.0</PackID>
+          <PackID>Keil.STM32F4xx_DFP.2.15.0</PackID>
           <PackURL>http://www.keil.com/pack/</PackURL>
           <Cpu>IRAM(0x20000000-0x2001FFFF) IRAM2(0x10000000-0x1000FFFF) IROM(0x8000000-0x80FFFFF) CLOCK(25000000) FPU2 CPUTYPE("Cortex-M4") TZ</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F405xx,_USE_RAMDRIVE</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;..\..\USBDevice4Cube\Inc;..\..\USBDevice\Include;..\..\USBDevice4Cube\XPD_USB;..\..\USBDevice\Templates;..\..\USBDevice\PDs\STM32_XPD;..\..\..\lwip\src\include;..\..\..\lwip\IDE</IncludePath>
+              <IncludePath>../Core/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc;../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F4xx/Include;../Drivers/CMSIS/Include;..\..\USBDevice4Cube\Inc;..\..\USBDevice\Include;..\..\USBDevice4Cube\XPD_USB;..\..\USBDevice\Templates;..\..\USBDevice\PDs\STM32_XPD;..\..\..\lwip\src\include;..\..\..\lwip\IDE;..\..\..\lwip\src\include\lwip\apps</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -619,9 +619,9 @@
           <GroupName>libs</GroupName>
           <Files>
             <File>
-              <FileName>..\..\Users\Mocnik\Documents\lwip\IDE\Objects\lwip.lib</FileName>
+              <FileName>lwip.lib</FileName>
               <FileType>4</FileType>
-              <FilePath>$TC_ROOT$\..\..\Users\Mocnik\Documents\lwip\IDE\Objects\lwip.lib</FilePath>
+              <FilePath>..\..\..\lwip\IDE\Objects\lwip.lib</FilePath>
             </File>
           </Files>
         </Group>
@@ -640,7 +640,7 @@
         <TargetCommonOption>
           <Device>STM32F405RGTx</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F4xx_DFP.2.14.0</PackID>
+          <PackID>Keil.STM32F4xx_DFP.2.15.0</PackID>
           <PackURL>http://www.keil.com/pack/</PackURL>
           <Cpu>IRAM(0x20000000-0x2001FFFF) IRAM2(0x10000000-0x1000FFFF) IROM(0x8000000-0x80FFFFF) CLOCK(25000000) FPU2 CPUTYPE("Cortex-M4") TZ</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -1294,9 +1294,9 @@
           <GroupName>libs</GroupName>
           <Files>
             <File>
-              <FileName>..\..\Users\Mocnik\Documents\lwip\IDE\Objects\lwip.lib</FileName>
+              <FileName>lwip.lib</FileName>
               <FileType>4</FileType>
-              <FilePath>$TC_ROOT$\..\..\Users\Mocnik\Documents\lwip\IDE\Objects\lwip.lib</FilePath>
+              <FilePath>..\..\..\lwip\IDE\Objects\lwip.lib</FilePath>
             </File>
           </Files>
         </Group>
@@ -1325,11 +1325,6 @@
     <Layers>
       <Layer>
         <LayName>&lt;Project Info&gt;</LayName>
-        <LayDesc></LayDesc>
-        <LayUrl></LayUrl>
-        <LayKeys></LayKeys>
-        <LayCat></LayCat>
-        <LayLic></LayLic>
         <LayTarg>0</LayTarg>
         <LayPrjMark>1</LayPrjMark>
       </Layer>
